fix: corrected button glow visibility by adding position: relative
Button glow wasn't rendering correctly because the element lacked position: relative.

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ a:visited{
 
 
 .btn{
+    position: relative;
     width: 240px;
     height: 52px;
     border: #00FFFF solid 2px;
